[gd_scene load_steps=12 format=2]

[ext_resource path="res://art/szornyek/teknoslab.png" type="Texture" id=1]
[ext_resource path="res://art/szornyek/teknoshead.png" type="Texture" id=2]
[ext_resource path="res://art/szornyek/teknostest.png" type="Texture" id=3]
[ext_resource path="res://monsters/turtle.gd" type="Script" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 21.0454
height = 124.276

[sub_resource type="CapsuleShape2D" id=2]
radius = 15.4854
height = 36.4322

[sub_resource type="CapsuleShape2D" id=3]
radius = 37.963

[sub_resource type="CircleShape2D" id=4]
radius = 39.6585

[sub_resource type="Animation" id=5]
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("shadow/test:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shadow/test/behuz:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("shadow/test/ColorRect/hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("shadow/test:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.102192, 3.44815 ) ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("shadow/test/behuz:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shadow/test:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.37268, -27.311 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("shadow/test/ColorRect/hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("shadow/test/behuz:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="turtle" type="KinematicBody2D"]
z_index = 5
collision_layer = 9
collision_mask = 9
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.278547, 29.3456 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="shadow" type="Sprite" parent="."]
position = Vector2( 2.77929, -17.174 )

[node name="test" type="Sprite" parent="shadow"]
position = Vector2( -0.102192, 3.44815 )
scale = Vector2( 2, 2 )
z_index = 5
texture = ExtResource( 3 )
hframes = 2

[node name="behuz" type="Sprite" parent="shadow/test"]

[node name="lab" type="Sprite" parent="shadow/test/behuz"]
position = Vector2( -0.544217, -2.9202 )
texture = ExtResource( 1 )

[node name="lab3" type="Sprite" parent="shadow/test/behuz/lab"]
self_modulate = Color( 0.466667, 0.427451, 0.427451, 1 )
position = Vector2( 7.71693, -8.93294 )
z_index = -1
texture = ExtResource( 1 )

[node name="lab2" type="Sprite" parent="shadow/test/behuz"]
position = Vector2( 50.5278, -2.73314 )
texture = ExtResource( 1 )

[node name="lab3" type="Sprite" parent="shadow/test/behuz/lab2"]
self_modulate = Color( 0.380392, 0.360784, 0.360784, 1 )
position = Vector2( -5.89292, -8.51201 )
z_index = -1
texture = ExtResource( 1 )

[node name="fej" type="Sprite" parent="shadow/test/behuz"]
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="shadow/test"]
margin_left = -15.9162
margin_top = -45.1568
margin_right = 34.0838
margin_bottom = -43.1568
color = Color( 0.988235, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hitbox" type="Area2D" parent="shadow/test/ColorRect" groups=[
"enemyhitbox",
"hurtbox",
]]
collision_layer = 40
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="shadow/test/ColorRect/hitbox"]
position = Vector2( -22.4346, 64.2448 )
rotation = 1.57079
shape = SubResource( 2 )
disabled = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="shadow/test/ColorRect/hitbox"]
position = Vector2( 15.4547, 53.0556 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="sense" type="Area2D" parent="shadow/test/ColorRect"]
visible = false
collision_layer = 6
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="shadow/test/ColorRect/sense"]
position = Vector2( 22.6102, 29.8778 )
shape = SubResource( 4 )

[node name="astimer" type="Timer" parent="shadow/test/ColorRect"]
wait_time = 0.7
one_shot = true

[node name="fleetimer" type="Timer" parent="shadow/test/ColorRect"]

[node name="ColorRect2" type="ColorRect" parent="shadow/test"]
visible = false
margin_left = -11.2136
margin_top = -40.2784
margin_right = -10.2136
margin_bottom = 3.72163
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/attack = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/run = SubResource( 7 )

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
margin_left = -0.596672
margin_top = -49.821
margin_right = 0.403328
margin_bottom = -5.82097
color = Color( 0.227451, 0.894118, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 17.8934
margin_top = -165.522
margin_right = 68.8934
margin_bottom = -139.522
rect_scale = Vector2( 0.5, 0.5 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="shadow/test/ColorRect/hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="shadow/test/ColorRect/sense" to="." method="_on_sense_body_entered"]
[connection signal="body_exited" from="shadow/test/ColorRect/sense" to="." method="_on_sense_body_exited"]
[connection signal="timeout" from="shadow/test/ColorRect/astimer" to="." method="_on_astimer_timeout"]
